<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/avatar_iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="200dp"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/user_name_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/user_name_title"
            android:textColor="@color/black"
            android:textSize="@dimen/user_info_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar_iv" />

        <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/spacing_normal"
            android:textColor="@color/black"
            android:textSize="@dimen/user_info_text_size"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@id/user_name_title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_name_title_tv"
            app:layout_constraintTop_toTopOf="@id/user_name_title_tv"
            tools:text="lorem ipsum" />

        <TextView
            android:id="@+id/user_reputation_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/user_reputation_title"
            android:textColor="@color/black"
            android:textSize="@dimen/user_info_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name_title_tv" />

        <TextView
            android:id="@+id/user_reputation_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/spacing_normal"
            android:textColor="@color/black"
            android:textSize="@dimen/user_info_text_size"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@id/user_reputation_title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_reputation_title_tv"
            app:layout_constraintTop_toTopOf="@id/user_reputation_title_tv"
            tools:text="dolore" />

        <TextView
            android:id="@+id/user_badges_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/user_badges_title"
            android:textColor="@color/black"
            android:textSize="@dimen/user_info_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_reputation_title_tv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_badges_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/user_badges_title_tv"
            tools:itemCount="3"
            tools:listitem="@layout/badges_list_item" />

        <TextView
            android:id="@+id/user_location_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/user_location_title"
            android:textColor="@color/black"
            android:textSize="@dimen/user_info_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_badges_rv" />

        <TextView
            android:id="@+id/user_location_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/spacing_normal"
            android:textColor="@color/black"
            android:textSize="@dimen/user_info_text_size"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@id/user_location_title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_location_title_tv"
            app:layout_constraintTop_toTopOf="@id/user_location_title_tv"
            tools:text="dolore" />

        <TextView
            android:id="@+id/user_age_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/user_age_title"
            android:textColor="@color/black"
            android:textSize="@dimen/user_info_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_location_title_tv" />

        <TextView
            android:id="@+id/user_age_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/spacing_normal"
            android:textColor="@color/black"
            android:textSize="@dimen/user_info_text_size"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@id/user_age_title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_age_title_tv"
            app:layout_constraintTop_toTopOf="@id/user_age_title_tv"
            tools:text="dolore" />

        <TextView
            android:id="@+id/user_created_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/user_created_date_title"
            android:textColor="@color/black"
            android:textSize="@dimen/user_info_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_age_title_tv" />

        <TextView
            android:id="@+id/user_created_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/spacing_normal"
            android:textColor="@color/black"
            android:textSize="@dimen/user_info_text_size"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@id/user_created_title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_created_title_tv"
            app:layout_constraintTop_toTopOf="@id/user_created_title_tv"
            tools:text="dolore" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>