<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.user_list.UserListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/green" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/user_info_block"
        android:padding="@dimen/spacing_normal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        tools:visibility="visible"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/avatar_iv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="200dp"
                app:layout_constraintWidth_percent="0.4" />

            <TextView
                android:id="@+id/user_name_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/user_name_title"
                android:textColor="@color/black"
                android:textSize="@dimen/user_info_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/avatar_iv" />

            <TextView
                android:id="@+id/user_name_tv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/spacing_normal"
                android:textColor="@color/black"
                android:textSize="@dimen/user_info_text_size"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@id/user_name_title_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/user_name_title_tv"
                app:layout_constraintTop_toTopOf="@id/user_name_title_tv"
                tools:text="lorem ipsum" />

            <TextView
                android:id="@+id/user_reputation_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/user_reputation_title"
                android:textColor="@color/black"
                android:textSize="@dimen/user_info_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_name_title_tv" />

            <TextView
                android:id="@+id/user_reputation_tv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/spacing_normal"
                android:textColor="@color/black"
                android:textSize="@dimen/user_info_text_size"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@id/user_reputation_title_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/user_reputation_title_tv"
                app:layout_constraintTop_toTopOf="@id/user_reputation_title_tv"
                tools:text="dolore" />

            <TextView
                android:id="@+id/user_badges_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/user_badges_title"
                android:textColor="@color/black"
                android:textSize="@dimen/user_info_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_reputation_title_tv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/user_badges_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/user_badges_title_tv"
                tools:itemCount="3"
                tools:listitem="@layout/badges_list_item" />

            <TextView
                android:id="@+id/user_location_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/user_location_title"
                android:textColor="@color/black"
                android:textSize="@dimen/user_info_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_badges_rv" />

            <TextView
                android:id="@+id/user_location_tv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/spacing_normal"
                android:textColor="@color/black"
                android:textSize="@dimen/user_info_text_size"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@id/user_location_title_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/user_location_title_tv"
                app:layout_constraintTop_toTopOf="@id/user_location_title_tv"
                tools:text="dolore" />

            <TextView
                android:id="@+id/user_age_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/user_age_title"
                android:textColor="@color/black"
                android:textSize="@dimen/user_info_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_location_title_tv" />

            <TextView
                android:id="@+id/user_age_tv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/spacing_normal"
                android:textColor="@color/black"
                android:textSize="@dimen/user_info_text_size"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@id/user_age_title_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/user_age_title_tv"
                app:layout_constraintTop_toTopOf="@id/user_age_title_tv"
                tools:text="dolore" />

            <TextView
                android:id="@+id/user_created_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/user_created_date_title"
                android:textColor="@color/black"
                android:textSize="@dimen/user_info_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_age_title_tv" />

            <TextView
                android:id="@+id/user_created_tv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/spacing_normal"
                android:textColor="@color/black"
                android:textSize="@dimen/user_info_text_size"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@id/user_created_title_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/user_created_title_tv"
                app:layout_constraintTop_toTopOf="@id/user_created_title_tv"
                tools:text="dolore" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/error_layout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:contentPadding="@dimen/spacing_normal"
        app:cardElevation="@dimen/spacing_tiny"
        app:cardCornerRadius="@dimen/spacing_small"
        tools:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/design_default_color_error"
                android:text="@string/error_user_info_not_available"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/retry_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/retry_button_title"
                android:textAllCaps="true"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>